# inf2475-estagios

./: .gitignore  README.md  pyproject.toml
sql/: postgresql.sql  schema.sql
src/internship_matching/: cli.py  constants.py  templates.py  utils.py
src/internship_matching/commands/: cluster.py  compare.py  explain.py  plot.py  plot_simulate.py  root.py  run.py  sanitize.py  test.py  train.py
src/internship_matching/data/: autoencoder.py  autolabeler.py  clusters.py  cvs.py  db.py  embed.py  job_autoencoder.py  jobs.py  match.py  plot.py  sharedautoencoder.py
src/internship_matching/models/: explainers.py  inference.py
src/internship_matching/training/: train_cv_feat.py  train_cv_job.py  train_job_feat.py
